--- a/beast_scheme/package/add/integral_bs.htm
+++ b/beast_scheme/package/add/integral_bs.htm
@@ -13,7 +13,7 @@
 <p>В текущей версии Beast используется интегральная оценка отклонений от пороговых значений Базовых потребностей. Это означает, что уровни отклонений BadValue по каждой Базовой потребности суммируются со знаком и сравниваются интегральным Порогом CompareLevel. Если суммарное значение превышает Порог, активируется состояние Плохо, если ниже Порога – состояние Норма, если произошел переход из Плохо в Норма, то на 50 пульсов активируется состояние Хорошо. При этом оценка отклонения от Порога CompareLevel меняется экспоненциально.</p>
 <table>
   <tr>
-    <td><img src="../../img/IntegBS.png" width="970" height="632" border="0" alt=""></td>
+    <td><img src="../../img/IntegBS.png" width="970" height="632" border="0" alt="Интегральное базовое состояние"></td>
   </tr>
   </table>
 <p>Срабатывание Компараторов Базовых потребностей активирует Базовые контексты, определяющие стили реагирования. Они заданы в справочниках на странице http://go/pages/gomeostaz.php. Каждая Базовая потребность активирует и гасит определенные Базовые контексты, при этом некоторые из них могут быть не совместимыми, что означает их взаимное торможение. Итоговый Контекстный рисунок из активных Базовых контекстов составляет интегральный Образ активации рефлексов</p>
