--- a/beast_scheme/package/add/base_param.htm
+++ b/beast_scheme/package/add/base_param.htm
@@ -7,7 +7,7 @@
 </head>
 <body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
 <div style="position:relative;height:20px;margin-bottom:20px;">
-<a href="../index.htm"><img src="../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
+<a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Базовые потребности</h1>
 </div>
 
